[metadata]
# this should be the same as the src/cautious_invention
name = cautious_invention
version = 0.0.1-dev
description = This is my package
long_description = file: README.rst

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Mathematics

keywords =
    SBML
    math
    PDEs

url = https://github.com/MerktSimon/cautious-invention

# Author information
author = Simon Merkt
author_email = simon.merkt@uni-bonn.de
maintainer = Simon Merkt
maintainer_email = simon.merkt@uni.bonn.de

[options]
# where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
